--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -11,4 +11,13 @@
     <string name="action_settings">Configurações</string>
     <string name="question">Qual a raça do cachorro da imagem acima?</string>
     <string name="score">Pontuação: %1$d</string>
+    <string name="time">Tempo: %1$d seg</string>
+    <string name="app_name">DoGame</string>
+    <string name="e_mail">E-mail</string>
+    <string name="title_activity_dogame">DogameActivity</string>
+    <string name="navigation_drawer_open">Abrir gaveta de navegação</string>
+    <string name="navigation_drawer_close">Fechar gaveta de navegação</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_desc">Cabeçalho de navegação</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
 </resources>
