--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,4 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="not_checked">Choose an option.</string>
+    <string name="next">Next</string>
+    <string name="skip">Skip</string>
+    <string name="password">Password</string>
+    <string name="login">LogIn</string>
+    <string name="signup">SignUp</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="register">Register</string>
+    <string name="action_settings">Settings</string>
+    <string name="question">What is the breed of dog in the picture above?</string>
+    <string name="score">Score: %1$d</string>
+    <string name="app_name">DoGame</string>
+    <string name="e_mail">E-mail</string>
+    <string name="title_activity_dogame">DogameActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="time">Time: %1$d sec</string>
 </resources>
