Finalização da lógica do quiz, melhoria no layout e adição de texto na tela home

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -14,7 +14,7 @@
     <string name="time">Tempo: %1$d seg</string>
     <string name="app_name">DoGame</string>
     <string name="e_mail">E-mail</string>
-    <string name="title_activity_dogame">DogameActivity</string>
+    <string name="title_activity_dogame">DoGame</string>
     <string name="navigation_drawer_open">Abrir gaveta de navegação</string>
     <string name="navigation_drawer_close">Fechar gaveta de navegação</string>
     <string name="nav_header_title">Android Studio</string>
