--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -13,11 +13,12 @@
     <string name="score">Score: %1$d</string>
     <string name="app_name">DoGame</string>
     <string name="e_mail">E-mail</string>
-    <string name="title_activity_dogame">DogameActivity</string>
+    <string name="title_activity_dogame">DoGame</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="time">Time: %1$d sec</string>
+    <string name="play">Play</string>
 </resources>
