--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,11 +13,13 @@
     <string name="time">Tempo: %1$d seg</string>
     <string name="app_name">DoGame</string>
     <string name="e_mail">E-mail</string>
-    <string name="title_activity_dogame">DogameActivity</string>
+    <string name="title_activity_dogame">DoGame</string>
     <string name="navigation_drawer_open">Abrir gaveta de navegação</string>
     <string name="navigation_drawer_close">Fechar gaveta de navegação</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_desc">Cabeçalho de navegação</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="play">Jogar</string>
+    <string name="welcome">Bem-vindo(a) ao DoGame!\nAqui você pode jogar um Quiz sobre raças de cachorros ou pode apenas conhecê-las melhor na área de estudos.\nAcesse todas as funcionalidades pelo menu no canto superior esquerdo ou clique no botão a seguir caso queira logo se desafiar!</string>
 </resources>
 
