--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -10,7 +10,7 @@
     <string name="register">Register</string>
     <string name="action_settings">Settings</string>
     <string name="question">What is the breed of dog in the picture above?</string>
-    <string name="score">Score: %1$d</string>
+    <string name="score">%1$d</string>
     <string name="app_name">DoGame</string>
     <string name="e_mail">E-mail</string>
     <string name="title_activity_dogame">DoGame</string>
@@ -19,6 +19,6 @@
     <string name="nav_header_title">User name</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="time">Time: %1$d sec</string>
+    <string name="time">%1$d sec</string>
     <string name="play">Play</string>
 </resources>
