--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,9 @@
     <string name="ranking">Ranking</string>
     <string name="see_dogs">Ver cachorros</string>
     <string name="exit">Sair</string>
+    <string name="general">Geral</string>
+    <string name="monthly">Mensal</string>
+    <string name="weekly">Semanal</string>
+    <string name="daily">Diário</string>
 </resources>
 
