Criação da funcionalidade de ver cachorros. Já está listando todas as raças e subraças. Falta exibir o cachorro ao clicar em uma das raças.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,11 @@
     <string name="nav_header_desc">Cabeçalho de navegação</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="play">Jogar</string>
-    <string name="welcome">Bem-vindo(a) ao DoGame!\nAqui você pode jogar um Quiz sobre raças de cachorros ou pode apenas conhecê-las melhor na área de estudos.\nAcesse todas as funcionalidades pelo menu no canto superior esquerdo ou clique no botão a seguir caso queira logo se desafiar!</string>
+    <string name="welcome">Bem-vindo(a) ao DoGame!\nAqui você pode jogar um Quiz sobre raças de
+        cachorros ou pode apenas conhecê-las melhor na área de estudos.\nAcesse todas as
+        funcionalidades pelo menu no canto superior esquerdo ou clique no botão a seguir caso queira
+        logo se desafiar!
+    </string>
     <string name="answer_quiz">Responder quiz</string>
     <string name="start">Início</string>
     <string name="ranking">Ranking</string>
@@ -30,5 +34,8 @@
     <string name="monthly">Mensal</string>
     <string name="weekly">Semanal</string>
     <string name="daily">Diário</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
 
