Mudança no layout da tela de login e de cadastro

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -31,4 +31,5 @@
     <string name="search_breed">pesquisar raça</string>
     <string name="choose_breed">Escolha uma raça:</string>
     <string name="erro_dog_image">Imagem do cachorro não foi encontrada.</string>
+    <string name="name">Nome</string>
 </resources>
