--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,11 +30,9 @@
     <string name="monthly">Mensal</string>
     <string name="weekly">Semanal</string>
     <string name="daily">Diário</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="search_breed">pesquisar raça</string>
     <string name="choose_breed">Escolha uma raça:</string>
     <string name="erro_dog_image">Imagem do cachorro não foi encontrada.</string>
+    <string name="name">Nome</string>
 </resources>
 
