--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="nav_header_desc">Cabeçalho de navegação</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="play">Jogar</string>
-    <string name="welcome">"Bem-vindo(a) ao DoGame! Aqui você pode jogar um Quiz sobre raças de         cachorros ou pode apenas conhecê-las melhor na área de estudos. Acesse todas as         funcionalidades pelo menu no canto superior esquerdo ou clique no botão a seguir caso queira         logo se desafiar!     "</string>
+    <string name="welcome">"Bem-vindo(a) ao DoGame!\nAqui você pode jogar um Quiz sobre raças de cachorros ou pode apenas conhecê-las melhor na área de estudos.\nAcesse todas as funcionalidades pelo menu no canto superior esquerdo ou clique no botão a seguir caso queira logo se desafiar!"</string>
     <string name="answer_quiz">Responder quiz</string>
     <string name="start">Início</string>
     <string name="ranking">Ranking</string>
