--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -23,4 +23,32 @@
     <string name="play">Play</string>
     <string name="erro_dog_image">Dog image was not found.</string>
     <string name="welcome">Welcome to DoGame!\nHere you can play a quiz about dog breeds or you can just get to know them better in the area of ​​studies.\nAccess all features from the menu in the upper left corner or click the button below if you want to challenge yourself!</string>
+    <string name="answer_quiz">Quiz Game</string>
+    <string name="start">Start</string>
+    <string name="see_dogs">See dogs</string>
+    <string name="exit">Log off</string>
+    <string name="general">General</string>
+    <string name="monthly">Monthly</string>
+    <string name="weekly">Weekly</string>
+    <string name="daily">Daily</string>
+    <string name="search_breed">Search breed</string>
+    <string name="choose_breed">Choose a breed:</string>
+    <string name="name">Name</string>
+    <string name="ranking">Ranking</string>
+    <string name="ERROR_INVALID_CUSTOM_TOKEN">The custom token format is incorrect. Please check the documentation.</string>
+    <string name="ERROR_CUSTOM_TOKEN_MISMATCH">The custom token corresponds to a different audience.</string>
+    <string name="ERROR_INVALID_CREDENTIAL">The supplied auth credential is malformed or has expired.</string>
+    <string name="ERROR_INVALID_EMAIL">The email address is badly formatted.</string>
+    <string name="ERROR_WRONG_PASSWORD">The password is invalid or the user does not have a password.</string>
+    <string name="ERROR_USER_MISMATCH">The supplied credentials do not correspond to the previously signed in user.</string>
+    <string name="ERROR_REQUIRES_RECENT_LOGIN">This operation is sensitive and requires recent authentication. Log in again before retrying this request.</string>
+    <string name="ERROR_ACCOUNT_EXISTS_WITH_DIFFERENT_CREDENTIAL">An account already exists with the same email address but different sign-in credentials. Sign in using a provider associated with this email address.</string>
+    <string name="ERROR_EMAIL_ALREADY_IN_USE">The email address is already in use by another account.</string>
+    <string name="ERROR_CREDENTIAL_ALREADY_IN_USE">This credential is already associated with a different user account.</string>
+    <string name="ERROR_USER_DISABLED">The user account has been disabled by an administrator.</string>
+    <string name="ERROR_USER_TOKEN_EXPIRED">The user\'s credential is no longer valid. The user must sign in again.</string>
+    <string name="ERROR_USER_NOT_FOUND">There is no user record corresponding to this identifier. The user may have been deleted.</string>
+    <string name="ERROR_INVALID_USER_TOKEN">The user\'s credential is no longer valid. The user must sign in again.</string>
+    <string name="ERROR_OPERATION_NOT_ALLOWED">This operation is not allowed. You must enable this service in the console.</string>
+    <string name="ERROR_WEAK_PASSWORD">The given password is invalid.</string>
 </resources>
